create todo, and rename Enum and end user resource, and change body POST in endpoint 'patch:user/{id}'
